# lightlink_view

./: .gitmodules  CMakeLists.txt  custom_widgets.cpp  custom_widgets.h  main.cpp  master_acquisition_thread.cpp  master_acquisition_thread.h  model.cpp  model.h  widget.cpp  widget.h
view/: master_view.cpp  master_view.h
widget/: widget.cpp  widget.h
